[tool.black]
line-length = 79

[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true


[tool.poetry]
name = "pycore"
version = "23.3.23"
description = "useful functions in python"
authors = ["Srinivas Gorur-Shandilya <code@srinivas.gs>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
interrogate = "^1.5.0"
coverage = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
